catkin_ws/logs/iq_gnc/build.make.017.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp: In function ‘void drone1_pos_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:24:2: error: ‘gnc_node’ was not declared in this scope
   24 |  gnc_node.getParam("namespace", ros_namespace);
      |  ^~~~~~~~
make[2]: *** [CMakeFiles/sub.dir/build.make:63: CMakeFiles/sub.dir/src/sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:433: CMakeFiles/sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
